--- a/HomeWork_1/app/src/main/AndroidManifest.xml
+++ b/HomeWork_1/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -13,8 +13,7 @@
         android:theme="@style/AppTheme">
         <service
             android:name=".service.ContactsService"
-            android:exported="false"></service>
-
+            android:exported="false" />
         <activity android:name=".ui.activity.LoadingContactsActivity" />
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
