--- a/HomeWork_2/build.gradle
+++ b/HomeWork_2/build.gradle
@@ -25,7 +25,10 @@ ext {
     ktxVersion = '1.3.1'
     appCompatVersion = '1.2.0'
     constraintLayoutVersion = '2.0.1'
+    recyclerViewVersion = '1.1.0'
     glideVersion = '4.11.0'
+    cardViewVersion = '1.0.0'
+    swipeRefreshLayout = '1.1.0'
 }
 
 task clean(type: Delete) {
