--- a/HomeWork_2/build.gradle
+++ b/HomeWork_2/build.gradle
@@ -24,11 +24,14 @@ allprojects {
 ext {
     ktxVersion = '1.3.1'
     appCompatVersion = '1.2.0'
-    constraintLayoutVersion = '2.0.1'
+    constraintLayoutVersion = '2.0.2'
     recyclerViewVersion = '1.1.0'
     glideVersion = '4.11.0'
     cardViewVersion = '1.0.0'
-    swipeRefreshLayout = '1.1.0'
+    swipeRefreshLayoutVersion = '1.1.0'
+    materialDesignVersion = '1.2.1'
+    fragmentVersion = '1.2.5'
+    lifecycleExtensionsVersion = '2.2.0'
 }
 
 task clean(type: Delete) {
