--- a/HomeWork_2/app/src/main/AndroidManifest.xml
+++ b/HomeWork_2/app/src/main/AndroidManifest.xml
@@ -1,31 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.adeldolgov.homework_2">
+    package="com.adeldolgov.feeder">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".FeederApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity
-            android:name=".ui.activity.ImageDetailsActivity"
-            android:theme="@style/AppTheme.ImageViewerTheme">
-        </activity>
-
-        <activity android:name=".ui.activity.PostDetailsActivity" />
-
-        <activity android:name=".ui.activity.MainActivity">
+        <activity android:name=".ui.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.MainActivity"/>
+        <activity
+            android:name=".ui.activity.ImageDetailsActivity"
+            android:theme="@style/AppTheme.ImageViewerTheme">
+        </activity>
+        <activity android:name=".ui.activity.PostDetailsActivity" />
     </application>
 
 </manifest>
