--- a/HomeWork_2/build.gradle
+++ b/HomeWork_2/build.gradle
@@ -24,7 +24,7 @@ allprojects {
 ext {
     ktxVersion = '1.3.1'
     appCompatVersion = '1.2.0'
-    constraintLayoutVersion = '2.0.2'
+    constraintLayoutVersion = '2.0.3'
     recyclerViewVersion = '1.1.0'
     glideVersion = '4.11.0'
     cardViewVersion = '1.0.0'
@@ -39,6 +39,9 @@ ext {
     vkSdkVersion = '2.2.0'
     retrofitVersion = '2.9.0'
     retrofitRxAdapterVersion = '2.6.4'
+    roomVersion = '2.2.5'
+    zoomageVersion = '1.3.1'
+    pagingVersion = '2.1.2'
 }
 
 task clean(type: Delete) {
