--- a/HomeWork_2/build.gradle
+++ b/HomeWork_2/build.gradle
@@ -41,6 +41,7 @@ ext {
     retrofitRxAdapterVersion = '2.6.4'
     roomVersion = '2.2.5'
     zoomageVersion = '1.3.1'
+    moxyVersion = '2.2.0'
 }
 
 task clean(type: Delete) {
